@@ -58,19 +58,19 @@ readonly DESUGAR_JAVA8_LIBS_CONFIG=(--rewrite_core_library_prefix java/time/ \
     --rewrite_core_library_prefix java/lang/Double8 \
     --rewrite_core_library_prefix java/lang/Integer8 \
     --rewrite_core_library_prefix java/lang/Long8 \
+    --rewrite_core_library_prefix java/lang/Math8 \
     --rewrite_core_library_prefix java/util/stream/ \
     --rewrite_core_library_prefix java/util/function/ \
-    --rewrite_core_library_prefix java/util/Arrays8 \
-    --rewrite_core_library_prefix java/util/Date8 \
+    --rewrite_core_library_prefix java/util/Desugar \
     --rewrite_core_library_prefix java/util/DoubleSummaryStatistics \
     --rewrite_core_library_prefix java/util/IntSummaryStatistics \
-    --rewrite_core_library_prefix java/util/LinkedHashSet8 \
     --rewrite_core_library_prefix java/util/LongSummaryStatistics \
     --rewrite_core_library_prefix java/util/Objects \
     --rewrite_core_library_prefix java/util/Optional \
     --rewrite_core_library_prefix java/util/PrimitiveIterator \
     --rewrite_core_library_prefix java/util/Spliterator \
     --rewrite_core_library_prefix java/util/StringJoiner \
+    --rewrite_core_library_prefix java/util/concurrent/atomic/DesugarAtomic \
     --retarget_core_library_member "java/lang/Double#max->java/lang/Double8" \
     --retarget_core_library_member "java/lang/Double#min->java/lang/Double8" \
     --retarget_core_library_member "java/lang/Double#sum->java/lang/Double8" \
@@ -80,11 +80,27 @@ readonly DESUGAR_JAVA8_LIBS_CONFIG=(--rewrite_core_library_prefix java/time/ \
     --retarget_core_library_member "java/lang/Long#max->java/lang/Long8" \
     --retarget_core_library_member "java/lang/Long#min->java/lang/Long8" \
     --retarget_core_library_member "java/lang/Long#sum->java/lang/Long8" \
-    --retarget_core_library_member "java/util/Arrays#stream->java/util/Arrays8" \
-    --retarget_core_library_member "java/util/Arrays#spliterator->java/util/Arrays8" \
-    --retarget_core_library_member "java/util/LinkedHashSet#spliterator->java/util/LinkedHashSet8" \
-    --retarget_core_library_member "java/util/Date#from->java/util/Date8" \
-    --retarget_core_library_member "java/util/Date#toInstant->java/util/Date8" \
+    --retarget_core_library_member "java/lang/Math#toIntExact->java/lang/Math8" \
+    --retarget_core_library_member "java/util/Arrays#stream->java/util/DesugarArrays" \
+    --retarget_core_library_member "java/util/Arrays#spliterator->java/util/DesugarArrays" \
+    --retarget_core_library_member "java/util/Calendar#toInstant->java/util/DesugarCalendar" \
+    --retarget_core_library_member "java/util/Date#from->java/util/DesugarDate" \
+    --retarget_core_library_member "java/util/Date#toInstant->java/util/DesugarDate" \
+    --retarget_core_library_member "java/util/GregorianCalendar#from->java/util/DesugarGregorianCalendar" \
+    --retarget_core_library_member "java/util/GregorianCalendar#toZonedDateTime->java/util/DesugarGregorianCalendar" \
+    --retarget_core_library_member "java/util/LinkedHashSet#spliterator->java/util/DesugarLinkedHashSet" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicInteger#getAndUpdate->java/util/concurrent/atomic/DesugarAtomicInteger" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicInteger#updateAndGet->java/util/concurrent/atomic/DesugarAtomicInteger" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicInteger#getAndAccumulate->java/util/concurrent/atomic/DesugarAtomicInteger" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicInteger#accumulateAndGet->java/util/concurrent/atomic/DesugarAtomicInteger" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicLong#getAndUpdate->java/util/concurrent/atomic/DesugarAtomicLong" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicLong#updateAndGet->java/util/concurrent/atomic/DesugarAtomicLong" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicLong#getAndAccumulate->java/util/concurrent/atomic/DesugarAtomicLong" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicLong#accumulateAndGet->java/util/concurrent/atomic/DesugarAtomicLong" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicReference#getAndUpdate->java/util/concurrent/atomic/DesugarAtomicReference" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicReference#updateAndGet->java/util/concurrent/atomic/DesugarAtomicReference" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicReference#getAndAccumulate->java/util/concurrent/atomic/DesugarAtomicReference" \
+    --retarget_core_library_member "java/util/concurrent/atomic/AtomicReference#accumulateAndGet->java/util/concurrent/atomic/DesugarAtomicReference" \
     --emulate_core_library_interface java/util/Collection \
     --emulate_core_library_interface java/util/Map \
     --emulate_core_library_interface java/util/Map\$Entry \
@@ -106,6 +122,7 @@ if [[ "$#" -gt 0 ]]; then
       done
 
       "${DESUGAR}" \
+          "--jvm_flags=--add-opens=java.base/java.lang.invoke=ALL-UNNAMED" \
           "--jvm_flag=-Djdk.internal.lambda.dumpProxyClasses=${TMPDIR}" \
           "@${params}"
       # temp dir deleted by TRAP installed above
@@ -115,6 +132,7 @@ if [[ "$#" -gt 0 ]]; then
 fi
 
 "${DESUGAR}" \
+    "--jvm_flags=--add-opens=java.base/java.lang.invoke=ALL-UNNAMED" \
     "--jvm_flag=-Djdk.internal.lambda.dumpProxyClasses=${TMPDIR}" \
     "$@" \
     "${DESUGAR_JAVA8_LIBS_CONFIG[@]}"
